# PiGesture-HID

./: .gitignore  README.md
pi_software/PiGesture-HID/: main.py  pyproject.toml  sdp_record.xml
pi_software/PiGesture-HID/src/: bt_server.py  gesture.py  models.py  mouse_logic.py  serial_com.py
pi_software/PiGesture-HID/tests/: test_protocol.py
stm_firmware/.metadata/: .log4j2.xml  version.ini
stm_firmware/.metadata/.plugins/org.eclipse.cdt.core/: PiGesture-HID.language.settings.xml
stm_firmware/.metadata/.plugins/org.eclipse.core.resources/.projects/PiGesture-HID/: .location  .markers
stm_firmware/.metadata/.plugins/org.eclipse.core.resources/.projects/PiGesture-HID/.indexes/: properties.index
stm_firmware/.metadata/.plugins/org.eclipse.core.resources/.projects/PiGesture-HID/.indexes/af/: history.index
stm_firmware/.metadata/.plugins/org.eclipse.core.resources/.root/: 3.tree
stm_firmware/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
stm_firmware/.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
stm_firmware/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
stm_firmware/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
stm_firmware/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
stm_firmware/PiGesture-HID/: .cproject  .project  PiGesture-HID Debug.launch  PiGesture-HID.ioc
stm_firmware/PiGesture-HID/Core/Inc/: ssd1306.h
stm_firmware/PiGesture-HID/Core/Src/: main.c  ssd1306.c  stm32f4xx_hal_msp.c
(+1 files in other folders)
