[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pigesture"
version = "0.1.0"
dependencies = [
    "pyserial",
    "mediapipe",
    "opencv-python-headless",
    "evdev",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]